<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screen_text_4"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_text"
        android:textAlignment="center"
        android:textSize="30sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/home_button_1"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#FF90EE90"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/home_button_2"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#FF00FFFF"
        app:cornerRadius="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/home_button_3"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#FF7FFFD4"
        app:cornerRadius="8dp" />

</LinearLayout>