<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screen_text_3"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/NameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#FF90EE90"
        app:cornerRadius="50dp" />

</LinearLayout>