<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:clickable="true"
    android:focusable="true">


    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screen_text_5"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screen_text_2"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/timeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/go_home_button"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#FF1E90FF"
        app:cornerRadius="8dp" />

    <TextView
        android:id="@+id/Text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/screen_text_6"
        android:textSize="30sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:id="@+id/modeButtonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one_click_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/one_click_button"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="#FF48D1CC"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/n_click_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/n_click_button"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="#FF48D1CC"
            app:cornerRadius="20dp" />
    </LinearLayout>

</LinearLayout>